2004-12-05  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (reader_loop): <wbr> didn't make it into
	HTML 4, remove it.  Sigh.
	texinfo-pretest mail from wl, 05 Dec 2004 23:39:05 +0100.

2004-12-02  Karl Berry  <karl@gnu.org>

	* configure.ac (install-warnings): simplify default case.  From te.

2004-12-01  Karl Berry  <karl@gnu.org>

	* pretest version 4.7.90.

	* util/texi2dvi (recode): new option, off by default.
	Unconditionally calling recode seems problematic, when there
	hasn't been a release for years and its Texinfo support is less than
	perfect.

2004-11-30  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Quotations and Examples): @quotation does not
	reduce interparagraph spacing.
	
	* makeinfo/node.c (cm_node) <html>: do not bother calling
	add_html_nodes in the split case, the filename is wrong.

2004-11-29  Karl Berry  <karl@gnu.org>

	Support for writing <a name="..."> using the old-style node name
		to HTML name conversion, to keep the gcc folks happy.
	* makeinfo/node.c (add_html_names): new routine, factoring out
	common code (plus new code) from cm_node.
	(cm_node) <html>: call it.
	* makeinfo/makeinfo.h (OLD_HTML_SAFE, OLD_URL_SAFE_CHAR):
	(re)define these.
	* makeinfo/html.c (add_escaped_anchor_name): take new argument to
	optionally output the old-style conversion.
	(add_anchor_name): change call.
	* index.c: change calls.
	* makeinfo/html.h (add_escaped_anchor_name): change decl.

2004-11-26  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (reader_loop): allow <wbr> after &mdash;

2004-11-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Fonts): document new command @sansserif.
	* doc/texinfo.tex (\sansserif): new command.
	* makeinfo/cmds.h (cm_sansserif): new cmd.
	* makeinfo/cmds.c (cm_sansserif): new cmd.
	(command_table): add it.
	* makeinfo/texinfo.dtd (Inline.fonts): add it; also slanted.
	* makeinfo/xml.h (SANSSERIF, SLANTED): define these new elements.
	* makeinfo/xml.c (texinfoml_element_list): add them.